# molez

./: .gitignore  CMakeLists.txt  README.md
CMakeBuild/: gen_nix.sh  gen_vs14.sh
data/: GAME_CFG.JSON
data/fnt/: MOLEZ.JSON
data/sfx/: ALIVE.SFX  BEGIN.SFX  INGAME1.MUS  INGAME2.MUS  MENU.MUS  MOVEDOWN.SFX  MOVEUP.SFX  SELECT.SFX
data/spr/: PLAYER.JSON
inc/molez/: Hebi.hpp  Material.hpp  Tick.hpp  Water.hpp  audio_manager.h  display_manager.h  input_manager.h  level.h  math.h  player.h  texture_manager.h
src/: Hebi.cpp  Hebi.hpp  Water.cpp  Water.h  aabb.cpp  aabb.h  audio_manager.cpp  audio_manager.h  display_manager.cpp  display_manager.h  entity.cpp  entity.h  game.cpp  game.h  game_state.cpp  game_state.h  hebi.h  input_manager.cpp  input_manager.h  level.cpp  level.h  main.cpp  material.h  math.cpp  math.h  menu.cpp  menu.h  menu_state.cpp  menu_state.h  physics.h  play_state.cpp  play_state.h  player.cpp  player.h  sprite.cpp  sprite.h  texture_manager.cpp  texture_manager.h  vec2.h
src/molez/: Hebi.cpp  audio_manager.cpp  display_manager.cpp  input_manager.cpp  level.cpp  main.cpp  texture_manager.cpp
